# Precog

./: README.md  SETUP.md  pyproject.toml  server.py  text_parser.py  video_analyser.py  video_parser.py  video_transcriber.py
ChromeExtension/: README.md  background.js  manifest.json  popup.html  popup.js  styles.css
transcripts/: macka_b.txt
utils/: openai_tooler.py
